# 8085_emulation

./: .gitignore  8085_emulator  BANK_SWITCHING.md  BRANCH_PROTECTION.md  CMakeLists.txt  COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP_INSTRUCTIONS.md  bank_switching_test.cpp  compile_commands.json  cpu8085.cpp  cpu8085.h  gui.cpp  gui.moc.cpp
.github/: BRANCH_PROTECTION_SETUP.md  README.md  branch-protection-config.json
.github/workflows/: build-and-test.yml  code-quality.yml
examples/: README.md  bank_switching_example.cpp
